sample/sample655.nev

func f1(a : int) -> var int
{
    a
}

func main() -> int
{
    let a = 1;

    f1(a) = 10;

    assert(a == 10);

    0
}

